#58 Fronted get image. Cleanup. Different Base64 encoder. Json parse error ATM.
